# kocarc_autoregister

./: .gitignore  KOCARC-AutoRegister.spec  KOCARC자동등록.spec  README.md  analyze_forms.py  build_template.py  config.example.ini  example_row.py  field_notes.py  form_fields_report.txt  kocarc-automation.ts  kocarc_bot.py  kocarc_gui.py  pyproject.toml  schema.json  schema_extract.py  test_dob.py  test_dt.py  test_grey.py  test_tree.py  test_vuk.py  사용설명서.md
docs/: 사용설명서.md
tests/: test_dob.py  test_dt.py  test_grey.py  test_resume.py  test_tree.py  test_vuk.py
