[project]
name = "kocarc-automation"
version = "0.1.0"
description = "KOCARC eCRF 환자 자동등록 (엑셀 → 사이트 자동입력)"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.15",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
